<resources>
    <string name="app_name">InventoryOrders</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_Up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="loader_msg">Please wait</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login_error">Invalid email or password.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="wrond_card_number">Card number is incorrect.</string>
    <string name="wrond_card_cvv">Card CVV is incorrect.</string>
    <string name="wrond_card_expiry_month">Card expiry month is incorrect.</string>
    <string name="wrond_card_expiry_year">Card expiry year is incorrect.</string>

    <string name="title_activity_login">Sign In</string>
    <string name="error_message">Something went wrong.</string>
    <string name="create_account">Create Account !!!</string>
    <string name="reset_password_success_message">An email has been sent to your email address. please check your email.</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email:</string>
    <string name="profile_phone">Phone:</string>
    <string name="profile_dob">Date of Birth:</string>
    <string name="profile_address">Address:</string>

    <string name="internet_error_msg">Sorry! Internet not available or poor internet connection.</string>
    <string name="unread_notifications_msg">You have some unread notifications.</string>
    <string name="no_notifications_msg">You do not have any unread notifications yet.</string>
    <string name="deliver_order_first">Please deliver the accepted order first.</string>
    <string name="retry_btn">Retry</string>

    <string name="title_activity_network_error">NetworkError</string>
    <string name="title_activity_slider_menu">SliderMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="action_received">Order Received</string>
    <string name="action_details">Show Details</string>
    <string name="action_location">Show Location</string>
    <string name="total">Total : </string>
    <string name="paid">Paid : </string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="signout">Sign Out</string>
    <string name="signing_off">Signing Off</string>

    <string name="unit_price">Unit Price: $</string>
    <string name="total_price">Total Price: $</string>
    <string name="currency">PKR</string>

    <string name="no_products_found">Sorry! No Products found for this Category.</string>
    <string name="quantity_selection_error">Quantity of Product must be greater than 0</string>
    <string name="xxx">XXXX</string>
    <string name="delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="checkoutbtn">CheckOut</string>

    <string name="card_num1_error">Card Num 1 is required</string>
    <string name="card_num2_error">Card Num 2 is required</string>
    <string name="card_num3_error">Card Num 3 is required</string>
    <string name="card_num4_error">Card Num 4 is required</string>
    <string name="customer_name_error">Customer Name is required</string>
    <string name="customer_email_error">Customer Email is required</string>
    <string name="customer_address_error">Customer Address is required</string>

    <string name="customer_name">Customer Name</string>
    <string name="customer_email">Customer Email</string>
    <string name="customer_address">Customer Address</string>
    <string name="google_api_key">AIzaSyDvngnN4kn5oYvuEy-BY-aPfs8YO3wxE88</string>
    <string name="title_activity_location_tracking">LocationTracking</string>
    <string name="title_activity_show_location">ShowLocation</string>
    <string name="check_location">Check Location</string>

    <string name="payment_confirmation">YES, I want to Pay this Amount</string>
    <string name="half_amount">Half Amount</string>
    <string name="total_amount">Total Amount</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_details">Show Details</string>
    <string name="show_location">Show Location</string>

    <string name="shopkeeper_type">Shop Keeper</string>
    <string name="saleman_type">Saleman</string>

    <string name="start_status">Start</string>
    <string name="accept_status">Accept</string>
    <string name="delivered_status">Delivered</string>

    <string name="stripe_payment_done">Stripe Payment done successfully.\n</string>
    <string name="change_status_msg">"You have to deliver your current order first"</string>

</resources>
