<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home"
            android:checked="true"/>

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />

        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@android:drawable/ic_menu_manage"-->
            <!--android:title="@string/settings" />-->

        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_history"
            android:title="@string/orders" />

        <!--<item-->
            <!--android:id="@+id/nav_notification"-->
            <!--android:icon="@drawable/notification"-->
            <!--android:title="@string/notifications"-->
            <!--app:actionLayout="@layout/notification_counter"/>-->
    </group>

    <item android:title="@string/signing_off">
        <menu>
            <item
                android:id="@+id/nav_signout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/signout" />
        </menu>
    </item>

</menu>
