<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".activities.SliderMenu">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textStripeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="Transaction Details"
            android:textColor="@color/colorPrimaryDark"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <EditText
            android:id="@+id/editStripeCardNumber1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:padding="5dp"
            android:singleLine="true"
            android:hint="@string/xxx"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>

        <EditText
            android:id="@+id/editStripeCardNumber2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:padding="5dp"
            android:singleLine="true"
            android:hint="@string/xxx"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>

        <EditText
            android:id="@+id/editStripeCardNumber3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:padding="5dp"
            android:singleLine="true"
            android:hint="@string/xxx"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>

        <EditText
            android:id="@+id/editStripeCardNumber4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:padding="5dp"
            android:singleLine="true"
            android:hint="@string/xxx"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">


        <EditText
            android:id="@+id/editStripeCVV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:padding="5dp"
            android:hint="CVC"
            android:maxLength="3"
            android:singleLine="true"
            android:inputType="number"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:textCursorDrawable="@null"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.80"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.20"
                android:text="MM/YYYY"
                android:textAllCaps="true"/>

            <Spinner
                android:layout_width="0dp"
                android:padding="2dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:id="@+id/spinnerStripeExpMonth"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:padding="2dp"

                android:id="@+id/spinnerStripeExpYear"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">




    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:text="$"
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:textAllCaps="true"/>

        <EditText
            android:id="@+id/editStripeAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:padding="2dp"
            android:editable="true"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textAlignment="textEnd"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/editCustName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:singleLine="true"
            android:hint="@string/customer_name"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/editCustEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:hint="@string/customer_email"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/editCustAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="true"
            android:singleLine="true"
            android:hint="@string/customer_address"
            android:textColor="#000000"
            android:textCursorDrawable="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnStripeCancel"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.10" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/btnStripeSave"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/textStripeMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textAllCaps="true"
            android:textAlignment="center"
            />
    </LinearLayout>

</LinearLayout>